fix(divided frames): align math img answers to radio buttons

--- a/Content/Styles/DividedFrames/Site.scss
+++ b/Content/Styles/DividedFrames/Site.scss
@@ -38,6 +38,10 @@ html, body {
   padding: 0px;
 }
 
+.number img {
+  margin-top: -4px;
+}
+
 .spanish>p, .english>p, .spanish>ul, .english>ul {
     margin-left: 20px;
 }
